# lab_1_indiramahadiva_SQL_DE25

./: README.md  load_sakila_sqlite_duckdb.py  main.ipynb  pyproject.toml
dashboard/pages/: sakila.md
dashboard/sources/sakila/: category_revenue.sql  films_by_rating.sql  popular_categories.sql  top_customers.sql
