[project]
name = "lab-1-indiramahadiva-sql-de25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb,sql-database]>=1.20.0",
    "duckdb>=1.4.3",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
]
